--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
+  "homepage": "http://asudbury.github.io/react-material-dashboard",
   "name": "material-kit-react",
   "version": "1.9.0",
   "description": "Material Kit React",
-  "private": true,
+  "private": false,
   "main": "src/index.js",
   "dependencies": {
     "@material-ui/core": "4.10.0",
@@ -19,7 +20,6 @@
     "react-chartist": "^0.14.3",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
-    "react-google-maps": "^9.4.5",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-slick": "0.26.1",
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.20.0",
+    "gh-pages": "^3.1.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "prettier": "2.0.5"
@@ -41,6 +42,8 @@
     "typescript": "3.9.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test --env=jsdom",
